# reliable-ai-agents

./: .gitignore  LICENSE.md  README.md  refactor_chapters.py  update_appendix.py
examples/postgres-rig-agent-jobs/: Cargo.toml  REFERENCES.md  docker-compose.postgres.yml
examples/postgres-rig-agent-jobs/logs/: app.log.2026-05-24
examples/postgres-rig-agent-jobs/sql/: 001_agent_jobs.sql  002_agent_tracking.sql  admit_agent_job.sql  agent_memory_by_scope.sql  approve_compensation_action.sql  audit_events_by_run.sql  claim_compensation_actions.sql  claim_outbox_events.sql  claim_scheduled_jobs.sql  compensation_backlog.sql  complete_scheduled_job.sql  credential_rotation_review.sql  data_protection_review.sql  dead_jobs_by_reason.sql  denied_authorization_events.sql  enqueue_agent_job.sql  evaluation_receipts_by_version.sql  expired_leases.sql  extend_lease.sql  fail_or_retry_scheduled_job.sql  failed_tool_calls.sql  failure_drill_status.sql  failure_history_by_job.sql  fault_tolerance_readiness.sql  job_event_timeline.sql  job_kind_launch_packet_status.sql  job_kind_lifecycle_review.sql  job_kind_readiness_review.sql  kafka_replay_safety_by_event.sql  mark_cancelled.sql  mark_compensation_failed.sql  mark_compensation_succeeded.sql  mark_outbox_event_failed.sql  mark_outbox_event_published.sql  mark_succeeded.sql  oldest_pending_job.sql  open_human_escalations.sql  operation_events_by_job.sql  outbox_backlog.sql  pause_job_kind.sql  (+27 more)
examples/postgres-rig-agent-jobs/src/: admission_control.rs  agent.rs  agent_memory.rs  agent_output.rs  agent_run.rs  agent_step.rs  api.rs  approval.rs  audit.rs  background_job.rs  cancellation.rs  compatibility.rs  compensation.rs  config.rs  cost_accounting.rs  credential_lifecycle.rs  data_protection.rs  domain.rs  escalation.rs  evaluation.rs  failure_drill.rs  failure_history.rs  fault_tolerance.rs  handoff.rs  lib.rs  (+26 more)
(+108 files in other folders)
