[package]
name = "postgres-rig-agent-jobs"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "postgres-rig-agent-jobs"
path = "src/main.rs"

[[bin]]
name = "deepseek-agent-demo"
path = "src/bin/deepseek_agent_demo.rs"
required-features = ["rig-agent"]

[[bin]]
name = "postgres-worker-demo"
path = "src/bin/postgres_worker_demo.rs"
required-features = ["postgres-store"]

[[bin]]
name = "postgres-api-server"
path = "src/bin/postgres_api_server.rs"
required-features = ["api-server", "postgres-store"]

[features]
default = []
api-server = ["dep:axum", "tokio/net", "tokio/sync"]
rig-agent = ["dep:rig"]
postgres-store = ["dep:sqlx-core", "dep:sqlx-postgres"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.4", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
rig = { package = "rig-core", version = "0.37.0", optional = true, default-features = false, features = ["reqwest", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "0.8.6", default-features = false, features = ["_rt-tokio", "_tls-none", "uuid", "chrono", "json"], optional = true }
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["uuid", "chrono", "json"], optional = true }
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time", "registry"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
